# C-Python-FFI

./: .gitignore  CMakeLists.txt  README.md  lib.cpp  main.cpp  main.py
include/: lib.h
